Initial Design Drafted

--- a/index.html
+++ b/index.html
@@ -24,6 +24,35 @@
 
 <body>
 
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<table>
+					<tr>
+						<td class="cell" id="0"></td>
+						<td class="cell" id="1"></td>
+						<td class="cell" id="2"></td>
+					</tr>
+					<tr>
+						<td class="cell" id="3"></td>
+						<td class="cell" id="4"></td>
+						<td class="cell" id="5"></td>
+					</tr>
+					<tr>
+						<td class="cell" id="6"></td>
+						<td class="cell" id="7"></td>
+						<td class="cell" id="8"></td>
+					</tr>	
+				</table>
+
+				<div class="endgame">
+					<div class="text"></div>
+				</div>
+				<button onclick="startGame()">Replay</button>
+			</div>
+		</div>
+	</div>
+
 		<!--jQuery-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!--jQuery UI-->
