--- a/index.html
+++ b/index.html
@@ -25,32 +25,38 @@
 <body>
 
 	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<table>
-					<tr>
-						<td class="cell" id="0"></td>
-						<td class="cell" id="1"></td>
-						<td class="cell" id="2"></td>
-					</tr>
-					<tr>
-						<td class="cell" id="3"></td>
-						<td class="cell" id="4"></td>
-						<td class="cell" id="5"></td>
-					</tr>
-					<tr>
-						<td class="cell" id="6"></td>
-						<td class="cell" id="7"></td>
-						<td class="cell" id="8"></td>
-					</tr>	
-				</table>
 
-				<div class="endgame">
-					<div class="text"></div>
-				</div>
-				<button onclick="startGame()">Replay</button>
-			</div>
+		<div class="row">
+			<div class="col-lg-12 text-right">
+			<a href="https://github.com/promie/tictactoe" target="_blank"><i class="fa fa-github github" id="github" aria-hidden="true"></i></a>
+		</div>		
+
+		<h1 class="title">TIC-TAC-TOE</h1>
+		<p class="author">A Project by P.Yutasane</p>
+
+
+		<div class="row">
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
 		</div>
+
+		<div class="row">
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+		</div>
+
+		<div class="row">
+			<div class="col"></div>
+			<div class="col"></div>
+			<div class="col"></div>
+		</div>
+
+		<div>
+			<button id="restart" class="btn btn-info">Restart</button>
+		</div>
+				
 	</div>
 
 		<!--jQuery-->
