--- a/index.html
+++ b/index.html
@@ -25,39 +25,47 @@
 <body>
 
 	<div class="container">
-
 		<div class="row">
-			<div class="col-lg-12 text-right">
+			<div class="col-md-12 text-right">
 			<a href="https://github.com/promie/tictactoe" target="_blank"><i class="fa fa-github github" id="github" aria-hidden="true"></i></a>
-		</div>		
-
-		<h1 class="title">TIC-TAC-TOE</h1>
-		<p class="author">A Project by P.Yutasane</p>
-
-
-		<div class="row">
-			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
-		</div>
-
-		<div class="row">
-			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
-		</div>
-
-		<div class="row">
-			<div class="col"></div>
-			<div class="col"></div>
-			<div class="col"></div>
-		</div>
-
-		<div>
-			<button id="restart" class="btn btn-info">Restart</button>
-		</div>
-				
+		</div>	
 	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="spacer">TIC-TAC-TOE</div>
+				<div class="gameboard" id="gameboard">
+					<div class="row">
+						<div class="square sq1"></div>
+						<div class="square sq2"></div>
+						<div class="square sq3"></div>
+					</div>
+
+					<div class="row">
+						<div class="square sq4"></div>
+						<div class="square sq5"></div>
+						<div class="square sq6"></div>
+					</div>
+
+					<div class="row">
+						<div class="square sq7"></div>
+						<div class="square sq8"></div>
+						<div class="square sq9"></div>
+					</div>
+				</div>
+				<div class="spacer"></div>
+				<div class="col-md-12 text-center" id="reload"><a href="#" class="btn btn-primary btn-lg">Reload Game</a></div>
+				<div class="col-md-12 text-center spacer" id="win">Player 1 has WON the Game!!!</div>
+				<div class="col-md-12 text-center spacer" id="hal">HAL has WON the Game!!!</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+
 
 		<!--jQuery-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
