Initial Design complete

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<div class="spacer">TIC-TAC-TOE</div>
+			<div class="col-md-12 text-center">
+				<h1>TIC-TAC-TOE</h1>
+				<p class="author">A Project By P Yutasane</p>
 				<div class="gameboard" id="gameboard">
 					<div class="row">
 						<div class="square sq1"></div>
@@ -54,18 +55,13 @@
 						<div class="square sq9"></div>
 					</div>
 				</div>
-				<div class="spacer"></div>
-				<div class="col-md-12 text-center" id="reload"><a href="#" class="btn btn-primary btn-lg">Reload Game</a></div>
-				<div class="col-md-12 text-center spacer" id="win">Player 1 has WON the Game!!!</div>
-				<div class="col-md-12 text-center spacer" id="hal">HAL has WON the Game!!!</div>
+				<div class="marginTop"></div>
+				<button class="btn btn-info btn-lg">RESTART</button>
+				<p id="win">Player 1 Has Won The Game!!!</p>
+				<p id="hal">AI has won the Game!!!</p>
 			</div>
 		</div>
 	</div>
-
-
-
-
-
 
 		<!--jQuery-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
