--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
 				<p class="author">A Project By P Yutasane</p>
 				<div class="gameboard" id="gameboard">
 					<div class="row">
-						<div class="square sq1"></div>
-						<div class="square sq2"></div>
-						<div class="square sq3"></div>
+						<div class="square sq1">X</div>
+						<div class="square sq2">O</div>
+						<div class="square sq3">X</div>
 					</div>
 
 					<div class="row">
-						<div class="square sq4"></div>
-						<div class="square sq5"></div>
-						<div class="square sq6"></div>
+						<div class="square sq4">X</div>
+						<div class="square sq5">X</div>
+						<div class="square sq6">O</div>
 					</div>
 
 					<div class="row">
-						<div class="square sq7"></div>
-						<div class="square sq8"></div>
-						<div class="square sq9"></div>
+						<div class="square sq7">X</div>
+						<div class="square sq8">X</div>
+						<div class="square sq9">O</div>
 					</div>
 				</div>
 				<div class="marginTop"></div>
