--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
 				<p class="author">A Project By P Yutasane</p>
 				<div class="gameboard" id="gameboard">
 					<div class="row">
-						<div class="square sq1">X</div>
-						<div class="square sq2">O</div>
-						<div class="square sq3">X</div>
+						<div class="square" data-i="0" data-j="0"></div>
+						<div class="square" data-i="0" data-j="1"></div>
+						<div class="square" data-i="0" data-j="2"></div>
 					</div>
 
 					<div class="row">
-						<div class="square sq4">X</div>
-						<div class="square sq5">X</div>
-						<div class="square sq6">O</div>
+						<div class="square" data-i="1" data-j="0"></div>
+						<div class="square" data-i="1" data-j="1"></div>
+						<div class="square" data-i="1" data-j="2"></div>
 					</div>
 
 					<div class="row">
-						<div class="square sq7">X</div>
-						<div class="square sq8">X</div>
-						<div class="square sq9">O</div>
+						<div class="square" data-i="2" data-j="0"></div>
+						<div class="square" data-i="2" data-j="1"></div>
+						<div class="square" data-i="2" data-j="2"></div>
 					</div>
 				</div>
 				<div class="marginTop"></div>
