Restart Button Working

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					</div>
 				</div>
 				<div class="marginTop"></div>
-				<button class="btn btn-info btn-lg">RESTART</button>
+				<button class="btn btn-info btn-lg" id="restart">RESTART</button>
 				<p id="win">Player 1 Has Won The Game!!!</p>
 				<p id="hal">AI has won the Game!!!</p>
 			</div>
