--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</div>
 				<div class="marginTop"></div>
 
-				<div id="winnerMessage"></div>
+				<div id="winner"></div>
 				<button class="btn btn-info btn-lg" onclick="startGame()" id="restart">RESTART</button>
 			</div>
 		</div>
