--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h1>TIC-TAC-TOE</h1>
+				<h1 class="title">TIC-TAC-TOE</h1>
 				<p class="author">A Project By P Yutasane</p>
 				<div class="gameboard" id="gameboard">
 					<div class="row">
@@ -57,7 +57,9 @@
 				</div>
 				<div class="marginTop"></div>
 
-				<div id="winner"></div>
+				<div id="winner">
+					<div id="winnerMessage"></div>
+				</div>
 				<button class="btn btn-info btn-lg" onclick="startGame()" id="restart">RESTART</button>
 			</div>
 		</div>
