--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 				<div class="marginTop"></div>
 
 				<div id="winner">
-					<div id="winnerMessage"></div>
+					<div id="winnerMessage">HELLO</div>
 				</div>
-				<button class="btn btn-info btn-lg" onclick="startGame()" id="restart">RESTART</button>
+
+				<button class="btn btn-default" onclick="startGame()" id="restart">RESTART</button>
+				
 			</div>
 		</div>
 	</div>
