Latest Update on styling

--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
 						<div class="square" id="8"></div>
 					</div>
 				</div>
-				<div class="marginTop"></div>
-
-				<div id="winner">
-					<div id="winnerMessage">HELLO</div>
-				</div>
+					<div id="winnerMessage"></div>
 
 				<button class="btn btn-default" onclick="startGame()" id="restart">RESTART</button>
 				
