--- a/index.html
+++ b/index.html
@@ -33,9 +33,21 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 text-center">
-				<h1 class="title">TIC-TAC-TOE</h1>
-				<p class="author">A Project By P Yutasane</p>
+			<div class="col-md-12">
+				<h1 class="title text-center">TIC-TAC-TOE</h1>
+				<p class="author text-center">A Project By P Yutasane</p>
+				<div style="overflow-x:auto;" id="score-board">
+				<table align="center">
+						<tr>
+						  <th>HUMAN</th>
+						  <th>COMPUTER</th>
+						</tr>
+						<tr>
+						  <td id="human-score"></td>
+						  <td id="computer-score"></td>
+						</tr>
+					  </table>
+					</div>
 				<div class="gameboard" id="gameboard">
 					<div class="row">
 						<div class="square" id="0"></div>
@@ -55,9 +67,10 @@
 						<div class="square" id="8"></div>
 					</div>
 				</div>
-					<div id="winnerMessage"></div>
+					<div id="winnerMessage" class="text-center"></div>
 
-				<button class="btn btn-default" onclick="startGame()" id="restart">RESTART</button>
+				<div id="restart" onclick="startGame()"><i class="fa fa-refresh" aria-hidden="true" ></i></div>
+	
 				
 			</div>
 		</div>
