--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<div style="overflow-x:auto;" id="score-board">
 				<table align="center">
 						<tr>
-						  <th>HUMAN</th>
-						  <th>COMPUTER</th>
+						  <th>HUMAN -0-</th>
+						  <th>COMPUTER -X-</th>
 						</tr>
 						<tr>
 						  <td id="human-score"></td>
